--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@octokit/rest": "16.36.0",
     "axios": "0.19.0",
     "dotenv": "8.2.0",
+    "mongodb": "^3.5.9",
     "wakatime-client": "2.0.3"
   },
   "devDependencies": {
